# simple-video-player

./: .gitignore  CMakeLists.txt  README.md  test_decoder.c  test_sdl.c  test_sdl_thread.c  test_yuv_sdl.c
